# priori

./: .gitattributes  .gitignore  README.md  Start-Priori.command  pyproject.toml
app/: ingest.py  llm.py  main.py  prompts.py  store.py
web/: app.js  index.html  style.css
