[project]
name = "priori"
version = "0.1.0"
description = "Every video and paper assumes a body of a priori knowledge. Priori supplies the parts you're missing."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "youtube-transcript-api>=1.0",
    "srt>=3.5",
    "webvtt-py>=0.5",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
# 仅在转写本地音视频文件时需要；体积较大（ctranslate2 + 模型）。
# 用 `uv sync --extra whisper` 安装。
whisper = [
    "faster-whisper>=1.0",
]

[tool.uv]
package = false
